[gd_scene load_steps=8 format=3 uid="uid://c8rx3ilcgvsgo"]

[ext_resource type="Script" uid="uid://crde8nnlcvw8" path="res://scripts/bell.gd" id="1_fribj"]
[ext_resource type="Texture2D" uid="uid://b1yllmhfgif6f" path="res://assets/images/items/Bell01.png" id="1_j7vni"]
[ext_resource type="Shader" uid="uid://dr0cvni2fbjkw" path="res://shaders/item_glow.gdshader" id="2_46klg"]
[ext_resource type="Texture2D" uid="uid://diegfgbrfdeve" path="res://assets/images/items/Shadow.png" id="2_c5yny"]
[ext_resource type="AudioStream" uid="uid://bvdghsxour21a" path="res://assets/sfx/bell_ding.mp3" id="4_sdw5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fribj"]
size = Vector2(190, 173)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sdw5a"]
shader = ExtResource("2_46klg")
shader_parameter/glow_enabled = false
shader_parameter/glow_color = Color(1, 1, 0, 1)
shader_parameter/glow_size = 10.0

[node name="Bell" type="Node2D"]
script = ExtResource("1_fribj")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(2.25, 55)
scale = Vector2(0.49186, 1.41379)
texture = ExtResource("2_c5yny")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_fribj")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_sdw5a")
position = Vector2(0, 90)
texture = ExtResource("1_j7vni")
centered = false
offset = Vector2(-127, -222)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sdw5a")
bus = &"SFX"

[connection signal="input_event" from="Area2D" to="." method="_on_bell_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
